simplfie the controller by pkg/rest package & more swagger improvement
