# pkg/rest/json.go
@@ -6,6 +6,8 @@ import (
 
 	configStruct "resedist/config"
 
+	"resedist/pkg/pagination"
+
 	"github.com/gin-gonic/gin"
 )
 
@@ -19,10 +21,15 @@ type Jsonresponse struct {
 	//errFmt *errors.ErrorFormat
 }
 
-type BadrequestConfig struct {
+type RestConfig struct {
 	Status        string
 	Error_message interface{}
 	Error_code    string
+	Data          interface{}
+	Pagination    pagination.PagePack
+	Paged         bool
+	NoContent     bool
+	Http          int
 }
 
 func New() *Jsonresponse {
@@ -41,7 +48,7 @@ func New() *Jsonresponse {
 	}
 }
 
-func (j *Jsonresponse) Badrequest(c *gin.Context, config BadrequestConfig) {
+func (j *Jsonresponse) Badrequest(c *gin.Context, config RestConfig) {
 
 	if config.Status == "" {
 		config.Status = j.rest.Failed
@@ -50,10 +57,59 @@ func (j *Jsonresponse) Badrequest(c *gin.Context, config BadrequestConfig) {
 	if config.Error_code == "" {
 		config.Error_code = j.rest.Bind_error
 	}
+	if config.Http < 1 {
+		config.Http = http.StatusBadRequest
+	}
 
-	c.JSON(http.StatusBadRequest, gin.H{
+	c.JSON(config.Http, gin.H{
 		j.Status:        config.Status,
 		j.Error_message: config.Error_message,
 		j.Error_code:    config.Error_code,
 	})
+}
+
+func (j *Jsonresponse) NotFound(c *gin.Context, config RestConfig) {
+
+	if config.Status == "" {
+		config.Status = j.rest.Failed
+	}
+
+	if config.Error_code == "" {
+		config.Error_code = j.rest.Not_found
+	}
+	if config.Http < 1 {
+		config.Http = http.StatusNotFound
+	}
+
+	c.JSON(config.Http, gin.H{
+		j.Status:        config.Status,
+		j.Error_message: config.Error_message,
+		j.Error_code:    config.Error_code,
+	})
+}
+
+func (j *Jsonresponse) Success(c *gin.Context, config RestConfig) {
+
+	if config.Status == "" {
+		config.Status = j.rest.Success
+	}
+	if config.Http < 1 {
+		config.Http = http.StatusOK
+	}
+
+	res := gin.H{
+		j.Status:        config.Status,
+		j.Error_message: config.Error_message,
+		j.Error_code:    config.Error_code,
+	}
+
+	if config.Paged {
+		res[j.Pagination] = config.Pagination
+	}
+
+	if !config.NoContent {
+		res[j.Data] = config.Data
+	}
+
+	c.JSON(config.Http, res)
 }
